# AdventurersProblem

./: Adventurers.hs  AdventurersProblem.cabal  AdventurersUI.hs  README.md
app/: Main.hs
src/: Adventurers.hs  AdventurersUI.hs
tests/: Spec.hs
